--- a/signup.css
+++ b/signup.css
@@ -27,6 +27,9 @@ input{
     padding-left: 10px;
 }
 body{
+    background-image: url(images/signup.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     margin-top: 20px;
     width: 40%;
     padding-left: 28%; 
