--- a/dashboard.css
+++ b/dashboard.css
@@ -3,15 +3,85 @@ body{
     background-image: url("images/map.png");
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100%;
 }
-h1{
-    color: aqua;
-    text-align: center;
-}
+
 div{
     color: white;
 }
 h3{
-    color: white;
+    color: black;
+    position: relative;
+    top: 800px;
 
+}
+h1{
+    color: black;
+    float: right;
+    /* position: relative;
+    bottom: 50px;
+    right: 30px; */
+       
+}
+.class1{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    display: flex;
+    position: sticky;
+    background: wheat;
+   
+}
+
+#span{
+    position: absolute;
+    cursor: pointer;
+    color: black;
+    right: 1rem;
+}
+
+
+.header{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0.5rem 1rem rgba(0,0,0,.1);
+    position: sticky;
+    top: 0;
+    left: 0;right: 0;
+    /* background: wheat; */
+    z-index: 1000;
+}
+
+.header .logo{
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color:black;
+    text-transform: capitalize;
+}
+
+.header .navbar #close-navbar{
+    position: absolute;
+    top: 1.5rem;
+    right: 2rem;
+    font-size: 2rem;
+    cursor: pointer;
+    color: black;
+    display: none;
+}
+
+
+.header .navbar a{
+    font-size: 2rem;
+    margin-left: 2rem;
+    color:black;
+    text-transform: capitalize;
+}
+
+#head{
+    color: aqua;
+}
+#a1,#a2{
+    color: white;
 }
