--- a/login.css
+++ b/login.css
@@ -44,5 +44,13 @@ a{
     font-size: 13px;
     color: white;
 }
+#asignup{
+    color:purple;
+    font-size: 15px;
+}
+#adash{
+    color:purple;
+    font-size: 15px;
 
+}
 
