--- a/login.css
+++ b/login.css
@@ -45,11 +45,11 @@ a{
     color: white;
 }
 #asignup{
-    color:purple;
+    color:aquamarine;
     font-size: 15px;
 }
 #adash{
-    color:purple;
+    color:aquamarine;
     font-size: 15px;
 
 }
