--- a/dashboard.css
+++ b/dashboard.css
@@ -2,31 +2,20 @@
 body{
     background-image: url("images/map.png");
     background-repeat: no-repeat;
-    background-size: cover;
-   
+    background-size: cover;  
 }
 
 div{
     color: white;
 }
-h3{
+#about1{
     color: black;
+    font-size: 20px;
     position: relative;
-    top: 750px;
+    top: 720px;
+    bottom: 500px;
+}
 
-}
-footer{
-    color: white;
-    float: right;
-   
-}
-.class1{
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    display: flex;
-    position: sticky;
-    background: wheat; 
-}
 #span{
     position: absolute;
     cursor: pointer;
@@ -40,31 +29,9 @@ footer{
     padding-bottom: 2rem;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    box-shadow: 0.5rem 1rem rgba(0,0,0,.1);
-    position: sticky;
-    top: 0;
-    left: 0;right: 0;
-    z-index: 1000;
+    align-items: center;   
+  
 }
-
-.header .logo{
-    font-size: 2.5rem;
-    font-weight: bolder;
-    color:black;
-    text-transform: capitalize;
-}
-
-.header .navbar #close-navbar{
-    position: absolute;
-    top: 1.5rem;
-    right: 2rem;
-    font-size: 2rem;
-    cursor: pointer;
-    color: black;
-    display: none;
-}
-
 
 .header .navbar a{
     font-size: 2rem;
